<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_play"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="2"

        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <EditText
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="150dp"

            android:autofillHints="name"
            android:background="@null"
            android:backgroundTint="@color/edit_fragment_100"
            android:clickable="false"
            android:cursorVisible="false"
            android:fontFamily="sans-serif"
            android:hint="@string/description"
            android:inputType="none"

            android:maxLength="@integer/max_length_description"
            android:scrollbarSize="6dp"
            android:scrollbars="vertical"
            android:text="@string/description"
            android:textSize="10pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/words"
            android:textSize="10pt"
            app:layout_constraintEnd_toStartOf="@+id/count_words"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/edit_fragment_100"
            android:contentDescription="@string/none"
            android:src="@drawable/ic_refresh"
            app:layout_constraintEnd_toStartOf="@+id/see_statistic"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/see_statistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/edit_fragment_100"
            android:contentDescription="@string/none"
            android:src="@drawable/ic_wysiwyg"
            android:tooltipText="@string/correct_words"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/count_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:text="0"
            android:textSize="10pt"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="63dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/scrollWord"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="20dp"

        android:layout_gravity="center"
        android:background="@color/divider"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/word"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:minWidth="250dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            android:scrollbars="horizontal"
            android:text="@string/word"
            android:textColor="@color/edit_fragment_100"
            android:textSize="14pt" />
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        android:layout_weight="4"
        android:columnCount="2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:autofillHints="name"
            android:backgroundTint="@color/edit_fragment_100"
            android:fontFamily="sans-serif"

            android:hint="@string/translate"
            android:inputType="text"
            android:maxWidth="200dp"

            android:maxHeight="100dp"
            android:maxLength="@integer/max_length_words"
            android:minWidth="150dp"
            android:textSize="14pt" />

        <Button
            android:id="@+id/check"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:layout_weight="1"
            android:background="@color/edit_fragment_100"
            android:text="@string/check"
            app:icon="@drawable/ic_chevron" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="342dp" />


</LinearLayout>